--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -33,6 +33,13 @@
 
         margin: 0 auto;
         padding: 0;
+        // padding: 20vw;
+
+        h1 {
+            // border: 2px solid #00ff00;
+            // margin: 20vh 0 0 0;
+            padding: 20vh 0 0 0;
+        }
 
         .contactForm {
             // border: 2px solid #00ff00;
