--- a/src/images/ea/banners/CR_4852_NMPF_US_Walmart_300x250/NMPF_04852.scss
+++ b/src/images/ea/banners/CR_4852_NMPF_US_Walmart_300x250/NMPF_04852.scss
@@ -35,7 +35,7 @@
     }
 
     .bgDiv, .bg_koDiv, .bg, .bg_ko {
-        border: 2px solid #ff0000;
+        // border: 2px solid #ff0000;
 
         width: 100%;
         height: 100%;
@@ -282,4 +282,14 @@
             // left: -50%;
         }
     }
+
+    // .clickTag {
+    //     border: 1px solid #ee70bc !important;
+
+    //     width: calc(100% - 1.75px);
+    //     height: calc(100% - 1.5px);
+
+    //     position: absolute;
+    //     top: 0;
+    // }
 }
