--- a/src/stylesheets/Work.scss
+++ b/src/stylesheets/Work.scss
@@ -154,7 +154,7 @@
     }
 
     .banneriFrameClosed {
-        border: 2px solid #ff0000;
+        // border: 2px solid #ff0000;
 
         display: none;
         z-index: 0;
@@ -235,7 +235,7 @@
     }
 
     .webiFrameContainerClosed {
-        border: 2px solid #ff0000;
+        // border: 2px solid #ff0000;
 
         position: absolute;
         z-index: 0;
@@ -263,13 +263,15 @@
         cursor: pointer;
 
         .videoPlayer {
-            border: 2px solid #00ff00;
+            // border: 2px solid #00ff00;
             // background: #999999;
 
+            // width: 100%;
             // height: 80%;
             // height: 50%;
+            height: 100%;
 
-            padding: 0 0;
+            padding: 0;
 
             position: absolute;
             top: 10%;
@@ -292,7 +294,7 @@
     }
 
     .videoContainerClosed {
-        border: 2px solid #ff0000;
+        // border: 2px solid #ff0000;
         // border: none;
 
         // width: 0;
